# renaulution-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  agent_test.ipynb  app.py  docker-compose.yml  pyproject.toml  rag_workflow.ipynb  requirements.txt
backend/: ai_agent.ipynb  ai_agent.py  ai_agent2.ipynb  logger.py  retriever.py
backend/data_ingestion/: ai_agent.py  extrait_renault.md  logger.py  md.md  pdf_ingestor.py  utils.py  vectorestore.py  vectorstore.py  wf_ingestor.ipynb  ytb_ingestor.py
backend/faiss_vectorstore/faiss_index_cv/: index.faiss  index.pkl
backend/langraph_agent/: agent.py  agent_test.ipynb  finance_node.py  plot_node.py  rag_node.py  retriever.py  router_node.py  utils.py
frontend/templates/: index.html
