[project]
name = "renaulution-agent"
version = "0.1.0"
description = "LangGraph RAG agent for Renault data"
requires-python = ">=3.10"

dependencies = [
    "Flask==3.1.1",
    "faiss-cpu==1.11.0",
    "langchain==0.3.26",
    "langchain_community==0.3.27",
    "langchain_core==0.3.68",
    "sentence-transformers==5.0.0",
    "langchain_google_genai==2.1.7",
    "langchain_openai==0.3.27",
    "langgraph==0.5.2",
    "matplotlib==3.10.3",
    "pandas==2.3.1",
    "tqdm==4.67.1",
    "yfinance==0.2.65",
    "rank-bm25==0.2.2"
]
